Spacing fixees

--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ header .time {
   font-weight: 700;
   font-size: 1em;
 
-  margin: 0;
+  margin: .5em 0 .5em 0;
 }
 
 .event-date {
